--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,145 @@
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  padding: 0;
+  --twitter-color: #50b7f5;
+  --twitter-background: #e3e3e3;
 }
+
+
+.feed {
+  flex: 0.4;
+  border-right: 1px solid var(--twitter-background);
+  border-left: 1px solid var(--twitter-background);
+  /* min-width: fit-content; */
+  overflow-y: scroll;
+  max-width: 600px;
+  margin: auto;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.feed::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.feed {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+}
+
+.feed__header {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  border-top: 1px solid var(--twitter-background);
+  border-bottom: 1px solid var(--twitter-background);
+  padding: 15px 20px;
+  display: flex;
+}
+
+.feed__header>h2 {
+  font-size: 20px;
+  font-weight: 800;
+}
+
+
+
+.post {
+  display: flex;
+  align-items: flex-start;
+  border-bottom: 1px solid var(--twitter-background);
+  padding-bottom: 10px;
+  cursor: pointer;
+  width: 100%;
+}
+.post a{
+  text-decoration: none;
+  
+}
+.post__body {
+  flex: 1;
+  padding: 10px;
+}
+
+.post__body>img {
+  border-radius: 20px;
+}
+
+.post__footer {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+}
+.post__footer button{
+  background: transparent;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  padding: .25rem .5rem;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  gap: .3rem;
+  color: white;
+}
+.post__footer button:hover{
+  
+
+}
+.post__footer button.liked{
+  background-color: rgba(255, 0, 0, 0.5);
+  color: rgba(255, 0, 0, 0.7);
+}
+.post__headerDescription {
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+
+.post__headerText>h3 {
+  font-size: 15px;
+  margin-bottom: 5px;
+}
+
+.post__badge {
+  font-size: 14px !important;
+  color: var(--twitter-color);
+}
+
+.post__headerSpecial {
+  font-weight: 600;
+  font-size: 12px;
+  color: gray;
+}
+
+.post__avatar {
+  padding: 20px;
+}
+
+/* login */
+
+.center-vertical{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
