--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,14 @@
-
 * {
   box-sizing: border-box;
   margin: 0;
 
+}
+:root {
+  --side-nav-width: 275px
+}
+html,
+body {
+  height: 100%;
 }
 
 body {
@@ -12,42 +18,58 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-body {
   margin: 0;
   padding: 0;
   --twitter-color: #50b7f5;
   --twitter-background: #e3e3e3;
 }
 
+.main-container {
+  display: flex !important;
+  justify-content: center;
+}
+
+.bar {
+  width: var(--side-nav-width);
+  position: relative;
+}
+
+.aside {
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.side-nav .header-container {
+  position: fixed;
+  width: var(--side-nav-width);
+}
+
+.side-nav .header-container .item {
+  padding: 1rem;
+  /* background-color: #50b7f5; */
+  display: flex;
+  align-items: center;
+  gap: .5rem;
+  margin-bottom: 1rem;
+}
+
+.side-nav .header-container .item:hover {
+  background-color: black;
+  cursor: pointer;
+}
 
 .feed {
-  flex: 0.4;
-  border-right: 1px solid var(--twitter-background);
-  border-left: 1px solid var(--twitter-background);
-  /* min-width: fit-content; */
-  overflow-y: scroll;
   max-width: 600px;
-  margin: auto;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-.feed::-webkit-scrollbar {
-  display: none;
+::-webkit-scrollbar {
+  display: none
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
-.feed {
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-}
 
 .feed__header {
   position: sticky;
   top: 0;
-  z-index: 100;
   border-top: 1px solid var(--twitter-background);
   border-bottom: 1px solid var(--twitter-background);
   padding: 15px 20px;
@@ -64,15 +86,14 @@ body {
 .post {
   display: flex;
   align-items: flex-start;
-  border-bottom: 1px solid var(--twitter-background);
-  padding-bottom: 10px;
   cursor: pointer;
   width: 100%;
 }
-.post a{
+
+.post a {
   text-decoration: none;
-  
 }
+
 .post__body {
   flex: 1;
   padding: 10px;
@@ -87,7 +108,8 @@ body {
   justify-content: space-evenly;
   margin-top: 20px;
 }
-.post__footer button{
+
+/* .post__footer button {
   background: transparent;
   outline: none;
   border: none;
@@ -98,15 +120,14 @@ body {
   align-items: center;
   gap: .3rem;
   color: white;
-}
-.post__footer button:hover{
-  
+} */
 
-}
-.post__footer button.liked{
-  background-color: rgba(255, 0, 0, 0.5);
+/* .post__footer button:hover {
+  background-color: rgba(255, 0, 0, 0.3);
   color: rgba(255, 0, 0, 0.7);
-}
+
+} */
+
 .post__headerDescription {
   margin-bottom: 10px;
   font-size: 15px;
@@ -116,7 +137,10 @@ body {
   font-size: 15px;
   margin-bottom: 5px;
 }
-
+.post__headerText{
+  display: flex;
+    justify-content: space-between;
+}
 .post__badge {
   font-size: 14px !important;
   color: var(--twitter-color);
@@ -134,12 +158,38 @@ body {
 
 /* login */
 
-.center-vertical{
+.center-vertical {
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+/* .side-nav.collapsed{
+  width: 30px;
+} */
+.bottom-nav {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  height: 60px;
+  z-index: 1000;
+  background-color: beige;
+}
 
+.aside {
+  margin-left: 1rem;
+}
 
+.comment-border-link {
+  display: block;
+  position: absolute;
+  top: 50px;
+  left: 0;
+  width: 12px;
+  height: calc(100% - 50px);
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  background-color: rgba(0, 0, 0, 0.1);
+  background-clip: padding-box;
+}
