--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,7 @@
   margin: 0;
 
 }
+
 :root {
   --side-nav-width: 18%
 }
@@ -23,10 +24,13 @@ body {
   --twitter-color: #50b7f5;
   --twitter-background: #e3e3e3;
 }
-
+#root{
+  height: 100%;
+}
 .main-container {
   display: flex !important;
   justify-content: center;
+  height: 100%;
   /* overflow-x: hidden; */
 }
 
@@ -69,14 +73,7 @@ body {
 }
 
 
-.feed__header {
-  position: sticky;
-  top: 0;
-  border-top: 1px solid var(--twitter-background);
-  border-bottom: 1px solid var(--twitter-background);
-  padding: 15px 20px;
-  display: flex;
-}
+
 
 .feed__header>h2 {
   font-size: 20px;
@@ -122,10 +119,12 @@ body {
   font-size: 15px;
   margin-bottom: 5px;
 }
-.post__headerText{
+
+.post__headerText {
   display: flex;
-    justify-content: space-between;
+  justify-content: space-between;
 }
+
 .post__badge {
   font-size: 14px !important;
   color: var(--twitter-color);
@@ -140,9 +139,11 @@ body {
 .post__avatar {
   margin-right: 1rem;
 }
-.post__content p{
-  white-space: pre
+
+.post__content p {
+  white-space: pre-line
 }
+
 /* login */
 
 .center-vertical {
@@ -150,6 +151,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
 /* .side-nav.collapsed{
@@ -165,6 +167,7 @@ body {
   left: 0;
   right: 0;
 }
+
 .top-nav {
   width: 100%;
   position: fixed;
@@ -175,7 +178,8 @@ body {
 .aside {
   margin-left: 1rem;
 }
-.search{
+
+.search {
   position: relative;
 }
 
@@ -192,18 +196,35 @@ body {
   background-clip: padding-box;
 }
 
-.redirect{
+.redirect {
   z-index: 95;
   position: absolute;
   width: 100%;
   height: 100%;
 }
-.post .post__headerText > *{
+
+.post .post__headerText>* {
   z-index: 100;
 }
-button{
+
+button {
   z-index: 99;
 }
-.brand{
+
+.brand {
   color: white;
+}
+
+
+
+
+
+@keyframes breathing {
+  0% {
+    background-color: rgb(94, 94, 94);
+  }
+
+  100% {
+    background-color: transparent;
+  }
 }
